# remote-app-monitor

./: README.md  banner.py  html_monitor_example.py  html_test.py  main.py  pyproject.toml  serial_test.py
.github/workflows/: pytest-app.yml  python-app.yml
config/: logging.yaml
config/default/: logging-default.yaml
src/app_monitor/: __init__.py  app_monitor.py  app_monitor2.py  app_monitor_client_example.py  csv_logger.py  elements_advanced.py  elements_base.py  logger.py  serial_reader.py  server.py  text_formatter.py  update_manager.py
src/terminal_app_info/: terminal_app_info.py
static/: styles.css
templates/: example.html  example_old.html  index.html
tests/: test_monitor_elements.py  test_text_format.py
